--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 	Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
 	příletem do destinace.
 
+<footer>
 	©2021, Czechitas
+</footer>
+
 </body>
 
 </html>
