--- a/index.html
+++ b/index.html
@@ -12,24 +12,34 @@
 </head>
 
 <body>
-	<div class="nadpis">
-	CESTOVKA
-</div>
+	
+	<h1>
+		CESTOVKA
+	</h1>
 
-	Last minute
-	Destinace
-	Časté otázky
+	<div class="menu">
+		Last minute
+		Destinace
+		Časté otázky
+	</div>
 
-	17 600 Kč
-	Pohoda pod palmami
-	Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+	<div class="pohoda">
+		17 600 Kč
+		Pohoda pod palmami
+		Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+	</div>
 
-	8 490 Kč
-	Klid u jezera
+	<div class="klid">
+		8 490 Kč
+		Klid u jezera
+	</div>
 
+	<div class="vylet">
 	4 990 Kč
 	Výlet na kole
+	</div>
 
+	<div class="info">
 	Podpora na místě
 	V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
 
@@ -41,8 +51,11 @@
 
 	Vaše bezpečí
 	Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
+	</div>
 
+	<h2>
 	Last minute zájezdy
+	</h2>
 
 	18 500 Kč
 	Grand Canyon
@@ -54,22 +67,36 @@
 	Romantika u horského jezera
 	Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
 
+<h2>
 	Novinky
+</h2>
 
-	15. 8. 2020
+<div class="clanky">
+
+	<div class="datum">
+		15. 8. 2020
+	</div>
+
 	Magický Zanzibar
 	Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
 	exotická flóra i fauna.
 
-	31. 9. 2020
+	<div class="datum">
+		31. 9. 2020
+	</div>
+
 	Návrat českých občanů ze zahraničí
 	Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
 	Ministerstva zdravotnictví ČR.
-
-	6. 10. 2020
+	
+	<div class="datum">
+		6. 10. 2020
+	</div>
+	
 	Na Kubu s PCR testem
 	Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
 	příletem do destinace.
+</div>
 
 <footer>
 	©2021, Czechitas
