--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-	
-	<h1>
-		CESTOVKA
-	</h1>
+
+	<img src="podklady/logo.svg" alt="logo cestovní kanceláře">
 
 	<div class="menu">
 		Last minute
@@ -35,23 +33,51 @@
 	</div>
 
 	<div class="vylet">
-	4 990 Kč
-	Výlet na kole
+		4 990 Kč
+		Výlet na kole
 	</div>
 
 	<div class="info">
-	Podpora na místě
-	V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
+		<div class="box-uvod">
+			<img class="znacky" src="podklady/map.svg" alt="místo">
+			<h4>
+				Podpora na místě
+			</h4>
+			<p>
+				V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
+			</p>
+		</div>
 
-	Služby na letišti
-	Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.
+		<div class="box-uvod">
+			<img class="znacky" src="podklady/plane.svg" alt="letiště">
+			<h4>
+				Služby na letišti
+			</h4>
+			<p>
+				Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.
+			</p>
+		</div>	
 
-	Do celého světa
-	Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.
+		<div class="box-uvod">
+			<img class="znacky" src="podklady/globe.svg" alt="celý svět">
+			<h4>
+				Do celého světa
+			</h4>
+			<p>
+				Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.
+			</p>
+		</div>
 
-	Vaše bezpečí
-	Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
-	</div>
+		<div class="box-uvod">
+			<img class=" znacky" src="podklady/shield.svg" alt="bezpečí">
+			<h4>
+				Vaše bezpečí
+			</h4>
+			<p>
+				Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
+			</p>
+		</div>
+</div>
 
 	<h2>
 	Last minute zájezdy
@@ -73,29 +99,49 @@
 
 <div class="clanky">
 
-	<div class="datum">
-		15. 8. 2020
+	<div class="box">
+		<div class="datum">
+			15. 8. 2020
+		</div>
+
+		<h4>
+			Magický Zanzibar
+		</h4>
+		<p>
+			Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
+			exotická flóra i fauna.
+		</p>
+
+	</div>	
+
+	<div class="box">
+		<div class="datum">
+			31. 9. 2020
+		</div>
+
+		<h4>
+			Návrat českých občanů ze zahraničí
+		</h4>
+		<p>
+			Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
+			Ministerstva zdravotnictví ČR.
+		</p>
 	</div>
-
-	Magický Zanzibar
-	Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
-	exotická flóra i fauna.
-
-	<div class="datum">
-		31. 9. 2020
-	</div>
-
-	Návrat českých občanů ze zahraničí
-	Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
-	Ministerstva zdravotnictví ČR.
 	
-	<div class="datum">
-		6. 10. 2020
-	</div>
+	<div class="box">
+		<div class="datum">
+			6. 10. 2020
+		</div>
 	
-	Na Kubu s PCR testem
-	Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
-	příletem do destinace.
+		<h4>
+			Na Kubu s PCR testem
+		</h4>
+		<p>
+			Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
+			příletem do destinace.
+		</p>
+	</div>
+
 </div>
 
 <footer>
