--- a/index.html
+++ b/index.html
@@ -80,18 +80,24 @@
 </div>
 
 	<h2>
-	Last minute zájezdy
+		Last minute zájezdy
 	</h2>
+	
+ 	<div class="kanon">
+		18 500 Kč
+		Grand Canyon
+	</div>
 
-	18 500 Kč
-	Grand Canyon
+	<div class="ostrov">
+		8 900 Kč
+		Pěšky po Kanárských ostrovech
+	</div>
 
-	8 900 Kč
-	Pěšky po Kanárských ostrovech
-
-	15 900 Kč
-	Romantika u horského jezera
-	Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
+	<div class="jezero">
+		15 900 Kč
+		Romantika u horského jezera
+		Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
+	</div>
 
 <h2>
 	Novinky
