--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<img src="podklady/logo.svg" alt="logo cestovní kanceláře">
 
 	<div class="menu">
-		Last minute
-		Destinace
-		Časté otázky
+		<button type="submit" name="Last minute" id="LastMinute">Last minute</button> 
+		<button type="submit" name="Destinace" id="Destinace">Destinace</button> 
+		<button type="submit" name="Časté dotazy" id="CasteDotazy">Časté dotazy</button> 
 	</div>
 
 	<div class="pohoda">
