--- a/index.html
+++ b/index.html
@@ -21,29 +21,32 @@
 	</header>
 
 	<div class="tipy">
-		<div class="pohoda">
-			<div class="cena">17 600 Kč</div>
-			<div class="nazev-velky">Pohoda pod palmami</div>
-			<div class="popis">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</div>	
-		</div>
+		
+			<div class="pohoda">
+				<div class="cena">17 600 Kč</div>
+				<div class="nazev-velky">Pohoda pod palmami</div>
+				<div class="popis">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</div>	
+			</div>
+		
+	
+		
+			<div class="klid">
+				<div class="cena">8 490 Kč</div>
+				<div class="nazev">Klid u jezera</div>
+			</div>
 
-		<div class="klid">
-			<div class="cena">8 490 Kč</div>
-			<div class="nazev">Klid u jezera</div>
-
-		</div>
-
-		<div class="vylet">
-			<div class="cena">4 990 Kč</div>
-			<div class="nazev">Výlet na kole</div>		
-		</div>
+			<div class="vylet">
+				<div class="cena">4 990 Kč</div>
+				<div class="nazev">Výlet na kole</div>		
+			</div>
+		
 	</div>
 
 	<div class="info">
 		<div class="box-uvod">
-			<div class="znacky">
-			<img src="podklady/map.svg" alt="místo">
-			</div>
+			
+			<img class="znacky" src="podklady/map.svg" alt="místo">
+			
 			
 			<h4 class="stred">Podpora na místě</h4>
 				
@@ -82,83 +85,56 @@
 			
 		</div>
 </div>
-<div class="zajezdy">
+
 	<h2>Last minute zájezdy</h2>
 		
-	
-	
- 	<div class="kanon">
-		<div class="cena">18 500 Kč</div>
-			
-		<div class="nazev">Grand Canyon</div>
-			
-	</div>
+		<div class="zajezdy">
+			<div class="zajezdy-male">
+ 				<div class="kanon">
+					<div class="cena">18 500 Kč</div>
+					<div class="nazev">Grand Canyon</div>
+				</div>
 
-	<div class="ostrov">
-		<div class="cena">8 900 Kč</div>
-			
-			<div class="nazev">Pěšky po Kanárských ostrovech</div>
-			
-	</div>
-
-	<div class="jezero">
-		<div class="cena">15 900 Kč</div>
-			
-		<div class="nazev-velky">Romantika u horského jezera</div>
-		<div class="popis">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</div>
-			
-	</div>
-</div>
-<h2>
-	Novinky
-</h2>
-
-<div class="clanky">
-
-	<div class="box">
-		<div class="datum">
-			15. 8. 2020
+				<div class="ostrov">
+					<div class="cena">8 900 Kč</div>
+					<div class="nazev">Pěšky po Kanárských ostrovech</div>
+				</div>
+			</div>
+		
+			<div class="zajezd-velky">
+				<div class="jezero">
+					<div class="cena">15 900 Kč</div>	
+					<div class="nazev-velky">Romantika u horského jezera</div>
+					<div class="popis">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</div>
+				</div>
+			</div>
 		</div>
 
-		<h4>
-			Magický Zanzibar
-		</h4>
-		<p>
-			Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
-			exotická flóra i fauna.
-		</p>
+	<h2>Novinky</h2>
 
-	</div>	
+		<div class="clanky">
 
-	<div class="box">
-		<div class="datum">
-			31. 9. 2020
-		</div>
+			<div class="box">
+				<div class="datum">15. 8. 2020</div>
+				<h4>Magický Zanzibar</h4>
+				<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
+					exotická flóra i fauna.</p>
+			</div>	
 
-		<h4>
-			Návrat českých občanů ze zahraničí
-		</h4>
-		<p>
-			Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
-			Ministerstva zdravotnictví ČR.
-		</p>
-	</div>
+			<div class="box">
+				<div class="datum">31. 9. 2020</div>
+				<h4>Návrat českých občanů ze zahraničí</h4>
+				<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
+					Ministerstva zdravotnictví ČR.</p>
+			</div>
 	
-	<div class="box">
-		<div class="datum">
-			6. 10. 2020
+			<div class="box">
+				<div class="datum">6. 10. 2020</div>
+				<h4>Na Kubu s PCR testem</h4>
+				<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
+				příletem do destinace.</p>
+			</div>
 		</div>
-	
-		<h4>
-			Na Kubu s PCR testem
-		</h4>
-		<p>
-			Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
-			příletem do destinace.
-		</p>
-	</div>
-
-</div>
 
 <footer>
 	©2021, Czechitas
