--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 	<div class="tipy">	
 		<div class="pohoda">
 			<div class="cena">17 600 Kč</div>
-			<div class="nazev-velky">Pohoda pod palmami</div>
-			<div class="popis">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</div>	
+			<div class="popis-velky">
+				<div class="nazev-velky">Pohoda pod palmami</div>
+				<div class="popis">Nejlepší dovolená pro nejvíc nejlínější lidi na světě</div>	
+			</div>
 		</div>
 
 		<div class="klid">
@@ -78,8 +80,10 @@
 		
 			<div class="jezero">
 				<div class="cena">15 900 Kč</div>	
-				<div class="nazev-velky">Romantika u horského jezera</div>
-				<div class="popis">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</div>
+				<div class="popis-velky">
+					<div class="nazev-velky">Romantika u horského jezera</div>
+					<div class="popis">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</div>
+				</div>
 			</div>
 		</div>
 
