--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 
 	<div class="info">
 		<div class="box-uvod">
-			<img class="znacky" src="podklady/map.svg" alt="místo">
+			<div class="znacka-1"><img src="podklady/map.svg" alt="místo"></div>
 			<h4 class="stred">Podpora na místě</h4>
 			<p class="uprostred">V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>		
 		</div>
 
 		<div class="box-uvod">
-			<img src="podklady/plane.svg" alt="letiště">
+			<div class="znacka-2"><img src="podklady/plane.svg" alt="letiště"></div>
 			<h4 class="stred">Služby na letišti</h4>
 			<p class="uprostred">Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
 		</div>	
 
 		<div class="box-uvod">
-			<img class="znacky" src="podklady/globe.svg" alt="celý svět">
+			<div class="znacka-3"><img src="podklady/globe.svg" alt="celý svět"></div>
 			<h4 class="stred">Do celého světa</h4>
 			<p class="uprostred">Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
 		</div>
 
 		<div class="box-uvod">
-			<img class="znacky" src="podklady/shield.svg" alt="bezpečí">
+			<div class="znacka-4"><img src="podklady/shield.svg" alt="bezpečí"></div>
 			<h4 class="stred">Vaše bezpečí</h4>
 			<p class="uprostred">Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
 		</div>
