--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</header>
 
 	<div class="tipy">	
-		<div class="pohoda">
+		<div class="tipy__pohoda">
 			<div class="cena">17 600 Kč</div>
 			<div class="popis-velky">
 				<div class="nazev-velky">Pohoda pod palmami</div>
@@ -29,37 +29,37 @@
 			</div>
 		</div>
 
-		<div class="klid">
+		<div class="tipy__klid">
 			<div class="cena">8 490 Kč</div>
 			<div class="nazev">Klid u jezera</div>
 		</div>
 
-		<div class="vylet">
+		<div class="tipy__vylet">
 			<div class="cena">4 990 Kč</div>
 			<div class="nazev">Výlet na kole</div>		
 		</div>	
 	</div>
 
 	<div class="info">
-		<div class="box-uvod">
+		<div class="info__box-uvod">
 			<div class="znacka-1"><img src="podklady/map.svg" alt="místo"></div>
 			<h4 class="stred">Podpora na místě</h4>
 			<p class="uprostred">V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>		
 		</div>
 
-		<div class="box-uvod">
+		<div class="info__box-uvod">
 			<div class="znacka-2"><img src="podklady/plane.svg" alt="letiště"></div>
 			<h4 class="stred">Služby na letišti</h4>
 			<p class="uprostred">Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
 		</div>	
 
-		<div class="box-uvod">
+		<div class="info__box-uvod">
 			<div class="znacka-3"><img src="podklady/globe.svg" alt="celý svět"></div>
 			<h4 class="stred">Do celého světa</h4>
 			<p class="uprostred">Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
 		</div>
 
-		<div class="box-uvod">
+		<div class="info__box-uvod">
 			<div class="znacka-4"><img src="podklady/shield.svg" alt="bezpečí"></div>
 			<h4 class="stred">Vaše bezpečí</h4>
 			<p class="uprostred">Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
@@ -68,17 +68,17 @@
 
 	<h2>Last minute zájezdy</h2>	
 		<div class="zajezdy">
- 			<div class="kanon">
+ 			<div class="zajezdy__kanon">
 				<div class="cena">18 500 Kč</div>
 				<div class="nazev">Grand Canyon</div>
 			</div>
 
-			<div class="ostrov">
+			<div class="zajezdy__ostrov">
 				<div class="cena">8 900 Kč</div>
 				<div class="nazev">Pěšky po Kanárských ostrovech</div>
 			</div>
 		
-			<div class="jezero">
+			<div class="zajezdy__jezero">
 				<div class="cena">15 900 Kč</div>	
 				<div class="popis-velky">
 					<div class="nazev-velky">Romantika u horského jezera</div>
@@ -88,23 +88,23 @@
 		</div>
 
 	<h2>Novinky</h2>
-		<div class="clanky">
-			<div class="box">
-				<div class="datum">15. 8. 2020</div>
+		<div class="novinky__clanky">
+			<div class="clanky__box">
+				<div class="clanky--datum">15. 8. 2020</div>
 				<h4>Magický Zanzibar</h4>
 				<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
 					exotická flóra i fauna.</p>
 			</div>	
 
-			<div class="box">
-				<div class="datum">31. 9. 2020</div>
+			<div class="clanky__box">
+				<div class="clanky--datum">31. 9. 2020</div>
 				<h4>Návrat českých občanů ze zahraničí</h4>
 				<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
 					Ministerstva zdravotnictví ČR.</p>
 			</div>
 	
-			<div class="box">
-				<div class="datum">6. 10. 2020</div>
+			<div class="clanky__box">
+				<div class="clanky--datum">6. 10. 2020</div>
 				<h4>Na Kubu s PCR testem</h4>
 				<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
 				příletem do destinace.</p>
